// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Breadcrumb Overflow 1`] = `
<section>
  

  <nav
    aria-label="overflowing product breadcrumbs"
  >
    
    
    <ul
      class="fd-breadcrumb"
    >
      
        
      <li
        class="fd-breadcrumb__item"
      >
        
            
        <div
          class="fd-popover"
        >
          
                
          <div
            class="fd-popover__control"
          >
            
                    
            <div
              aria-controls="breadcrumb1"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="Show collapsed breadcrumbs"
              class="fd-breadcrumb__link"
              onclick="onPopoverClick('breadcrumb1');"
              onkeypress="isSpaceOrEnter(event, onPopoverClick('breadcrumb1'));"
              role="button"
              tabindex="0"
            >
              
                            ...
                        
              <i
                class="fd-breadcrumb__dropdown-icon sap-icon sap-icon--slim-arrow-down"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
                
          <div
            aria-hidden="false"
            class="fd-popover__body fd-popover__body--no-arrow"
            id="breadcrumb1"
          >
            
                    
            <div
              class="fd-popover__wrapper"
            >
              
                        
              <ul
                class="fd-list fd-list--navigation"
                role="menu"
              >
                
                            
                <li
                  class="fd-list__item fd-list__item--link"
                  role="menuitem"
                  tabindex="-1"
                >
                  
                                
                  <a
                    class="fd-list__link"
                    href="#"
                    tabindex="0"
                  >
                    
                                    
                    <span
                      class="fd-list__title"
                    >
                      Products
                    </span>
                    
                                
                  </a>
                  
                            
                </li>
                
                            
                <li
                  class="fd-list__item fd-list__item--link"
                  role="menuitem"
                  tabindex="-1"
                >
                  
                                
                  <a
                    class="fd-list__link"
                    href="#"
                    tabindex="0"
                  >
                    
                                    
                    <span
                      class="fd-list__title"
                    >
                      Suppliers
                    </span>
                    
                                
                  </a>
                  
                            
                </li>
                
                            
                <li
                  class="fd-list__item fd-list__item--link"
                  role="menuitem"
                  tabindex="-1"
                >
                  
                                
                  <a
                    class="fd-list__link"
                    href="#"
                    tabindex="0"
                  >
                    
                                    
                    <span
                      class="fd-list__title"
                    >
                      Titanium
                    </span>
                    
                                
                  </a>
                  
                            
                </li>
                
                        
              </ul>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </li>
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-breadcrumb__link"
          href="#"
          tabindex="0"
        >
          Ultra Portable
        </a>
      </li>
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-breadcrumb__link"
          href="#"
          tabindex="0"
        >
          12 inch
        </a>
      </li>
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-breadcrumb__link"
          href="#"
          tabindex="0"
        >
          Super portable deluxe
        </a>
      </li>
      
        
      <li
        aria-current="page"
        class="fd-breadcrumb__item"
      >
        Laptop
      </li>
      
    
    </ul>
    

  </nav>
  

  <div
    style="height: 150px"
  />
  

</section>
`;

exports[`Storyshots Components/Breadcrumb Standard 1`] = `
<nav
  aria-label="products breadcrumbs"
>
  
    
  <ul
    class="fd-breadcrumb"
  >
    
        
    <li
      class="fd-breadcrumb__item"
    >
      <a
        class="fd-breadcrumb__link"
        href="#"
        tabindex="0"
      >
        Products
      </a>
    </li>
    
        
    <li
      class="fd-breadcrumb__item"
    >
      <a
        class="fd-breadcrumb__link"
        href="#"
        tabindex="0"
      >
        Suppliers
      </a>
    </li>
    
        
    <li
      class="fd-breadcrumb__item"
    >
      <a
        class="fd-breadcrumb__link"
        href="#"
        tabindex="0"
      >
        Titanium
      </a>
    </li>
    
        
    <li
      class="fd-breadcrumb__item"
    >
      <a
        class="fd-breadcrumb__link"
        href="#"
        tabindex="0"
      >
        Ultra Portable
      </a>
    </li>
    
        
    <li
      class="fd-breadcrumb__item"
    >
      <a
        class="fd-breadcrumb__link"
        href="#"
        tabindex="0"
      >
        12 inch
      </a>
    </li>
    
        
    <li
      class="fd-breadcrumb__item"
    >
      <a
        class="fd-breadcrumb__link"
        href="#"
        tabindex="0"
      >
        Super portable deluxe
      </a>
    </li>
    
        
    <li
      aria-current="page"
      class="fd-breadcrumb__item"
    >
      Laptop
    </li>
    
    
  </ul>
  

</nav>
`;
